# Composite-Feature-Selection

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  example.ipynb  requirements.txt  setup.cfg  setup.py  standalone_example.ipynb
.github/workflows/: test.yml  test_tutorials.yml
compfs/: __init__.py  base_model.py  compfs.py  ensemble_stg.py  lasso.py  metrics.py  random_forests.py  thresholding_functions.py  utils.py
compfs/datasets/: __init__.py  chem_featuriser.py  datasets.py  network.py
compfs/datasets/chem_data/: README.md
compfs/datasets/metabric_data/: README.md
compfs/models/: __init__.py  base_model.py  compfs.py  ensemble_stg.py  lasso.py  random_forests.py
datasets/: chem_featuriser.py  datasets.py
experiments/: run_evaluation.py  run_experiment.py
experiments/experiment_configs/: chem.py  config_list.py  metabric.py  mnist.py  syn.py
experiments/notebooks/: cae_chem.ipynb  cae_syn.ipynb  concrete_autoencoder.ipynb  group_lasso.ipynb  mnist_figure.ipynb  mnist_post_analysis.ipynb  stg.ipynb
model/: base_model.py  compfs.py  ensemble_stg.py  lasso.py  metrics.py  random_forests.py  thresholding_functions.py  utils.py
tests/: conftest.py  experiments_test.py  sanity_test.py
tutorials/: example.ipynb  standalone_example.ipynb
