[metadata]
name = compfs
version = 0.0.1
description = Composite Feature Selection using Deep Ensembles
long_description = file: README.md
long_description_content_type = text/markdown
author = Alexander Norcliffe
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
install_requires =
    jupyter
    matplotlib
    notebook
    numpy>=1.21.6
    pandas>=1.3.5
    rdkit
    scikit-learn>=1.0.2
    scipy>=1.7.3
    torch>=1.12.1
    torchvision>=0.13.1
    importlib-metadata;python_version<"3.8"
include_package_data = True
package_dir =
    =.
zip_safe = False

[options.packages.find]
where = .

[options.extras_require]
testing =
    bandit
    flake8
    ipykernel
    isort
    matplotlib
    nbconvert
    nltk
    notebook
    pre-commit
    py
    pytest
    pytest-benchmark
    pytest-cov
    pytest-xdist[psutil]
    pytest-xprocess
    scipy>=1.7.3
    seaborn
